# aliyun-ddns

./: .gitignore  Cargo.toml  README.md
common_conf/: config.yaml  log4rs.yaml
src/: config.rs  lib.rs  main.rs
src/derived/: mod.rs
src/handler/: comm_prehandle.rs  construct_request.rs  mod.rs  obtain_records.rs  update_records.rs
src/model/: argument_model.rs  initial_model.rs  mod.rs  record_model.rs
src/network/: basic.rs  mod.rs  public_ip_fetcher.rs
