[package]
name = "aliyun-ddns"
version = "0.0.1"
authors = ["itachy <jevo747@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
# log
log = "0.4"
log4rs = "0.8"
# network
reqwest = "0.9"
# others
regex = "1.3"
serde_yaml = "0.8"
error-chain = "0.12"
serde = { version = "1.0", features = ["derive"] }
rust-crypto = "0.2"
rustc-serialize = "0.3"
base64 = "0.10"
chrono = "0.4"
rand = "0.7"
url = "2.1"
serde_json = "1.0"
structopt = "0.3"