[package]
name = "aliyun-ddns"
version = "0.1.0"
authors = ["Paulswith <jevo747@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
# log
log = "0.4.17"
log4rs = "1.1.1"
# network
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# others
regex = "1.6.0"
serde_yaml = "0.9.10"
serde = { version = "1.0.144", features = ["derive"] }
# rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
base64 = "0.13.0"
chrono = "0.4.22"
rand = "0.8.5"
url = "2.2.2"
serde_json = "1.0.85"
structopt = "0.3.26"

anyhow = "1.0.63"
sha1 = "^0.10"
hmac = "^0.12"